# python_google_translator

./: backend.py  pyproject.toml
web/: home.html  main.js
