[tool.poetry]
name = "python_google_translator"
version = "0.1.0"
description = ""
authors = ["Somen <somenbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Eel = "^0.14.0"
googletrans = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
